--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -9,9 +9,9 @@ RAILWAY_COMPARISON_DB_NAME="railway"
 RAILWAY_COMPARISON_DB_PASSWORD="lDgNeerYObYnBioDuCMIYiSlmHCXLDKW"
 RAILWAY_COMPARISON_DB_PORT="37105"
 RAILWAY_COMPARISON_DB_USER="postgres"
-RAILWAY_DEFAULT_DB_HOST="autorack.proxy.rlwy.net"
-RAILWAY_DEFAULT_DB_NAME="railway"
-RAILWAY_DEFAULT_DB_PASSWORD="zWIFlOKNSPCwMZNbrBOLIeZRuRJscIuS"
-RAILWAY_DEFAULT_DB_PORT="27249"
-RAILWAY_DEFAULT_DB_USER="postgres"
+RAILWAY_DEFAULT_DB_HOST="dpg-d27op815pdvs73frksd0-a"
+RAILWAY_DEFAULT_DB_NAME="Data1"
+RAILWAY_DEFAULT_DB_PASSWORD="Li3UZ0a9qHoEKrCWxYPMXMXbETerw2zv"
+RAILWAY_DEFAULT_DB_PORT="5432"
+RAILWAY_DEFAULT_DB_USER="data1_23n9_user"
 SECRET_KEY="django-insecure-n_!-muy+9$*!f0j=sfyz44p%tf@5^6*-*8(q6$ecv8t=mj84--"
