--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -4,11 +4,12 @@ EMAIL_HOST_PASSWORD="dusc qbjx raae wbpg"
 EMAIL_HOST_USER="vfpogcustomerservice@gmail.com"
 EMAIL_PORT="587"
 EMAIL_USE_TLS="True"
-RAILWAY_COMPARISON_DB_HOST="junction.proxy.rlwy.net"
+RAILWAY_COMPARISON_DB_HOST="dpg-d27ov3e3jp1c73fisd50-a"
 RAILWAY_COMPARISON_DB_NAME="railway"
 RAILWAY_COMPARISON_DB_PASSWORD="lDgNeerYObYnBioDuCMIYiSlmHCXLDKW"
 RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="postgres"
+
 RAILWAY_DEFAULT_DB_HOST="dpg-d27ov3e3jp1c73fisd50-a"
 RAILWAY_DEFAULT_DB_NAME="Data1"
 RAILWAY_DEFAULT_DB_PASSWORD="Li3UZ0a9qHoEKrCWxYPMXMXbETerw2zv"
