--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -5,7 +5,7 @@ EMAIL_HOST_USER="vfpogcustomerservice@gmail.com"
 EMAIL_PORT="587"
 EMAIL_USE_TLS="True"
 RAILWAY_COMPARISON_DB_HOST="dpg-d27ov3e3jp1c73fisd50-a"
-RAILWAY_COMPARISON_DB_NAME="railway"
+RAILWAY_COMPARISON_DB_NAME="data2_txht"
 RAILWAY_COMPARISON_DB_PASSWORD="lDgNeerYObYnBioDuCMIYiSlmHCXLDKW"
 RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="postgres"
