--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -8,7 +8,7 @@ RAILWAY_COMPARISON_DB_HOST="dpg-d27ov3e3jp1c73fisd50-a"
 RAILWAY_COMPARISON_DB_NAME="data2_txht"
 RAILWAY_COMPARISON_DB_PASSWORD="lDgNeerYObYnBioDuCMIYiSlmHCXLDKW"
 RAILWAY_COMPARISON_DB_PORT="5432"
-RAILWAY_COMPARISON_DB_USER="postgres"
+RAILWAY_COMPARISON_DB_USER="data2_txht_user"
 
 RAILWAY_DEFAULT_DB_HOST="dpg-d27ov3e3jp1c73fisd50-a"
 RAILWAY_DEFAULT_DB_NAME="Data1"
