--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -11,7 +11,7 @@ RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="data2_txht_user"
 
 RAILWAY_DEFAULT_DB_HOST="dpg-d27op815pdvs73frksd0-a"
-RAILWAY_DEFAULT_DB_NAME="Data1"
+RAILWAY_DEFAULT_DB_NAME="data1_23n9"
 RAILWAY_DEFAULT_DB_PASSWORD="Li3UZ0a9qHoEKrCWxYPMXMXbETerw2zv"
 RAILWAY_DEFAULT_DB_PORT="5432"
 RAILWAY_DEFAULT_DB_USER="data1_23n9_user"
