--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -10,9 +10,9 @@ RAILWAY_COMPARISON_DB_PASSWORD="8SviYZ7Z3cCHn91XwZTjfj5C9FqqZ6Go"
 RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="data2_txht_user"
 
-RAILWAY_DEFAULT_DB_HOST="dpg-d27op815pdvs73frksd0-a"
-RAILWAY_DEFAULT_DB_NAME="data1_23n9"
-RAILWAY_DEFAULT_DB_PASSWORD="Li3UZ0a9qHoEKrCWxYPMXMXbETerw2zv"
+RAILWAY_DEFAULT_DB_HOST="dpg-db.qaamhqpezfufjziznxtu.supabase.co"
+RAILWAY_DEFAULT_DB_NAME="postgres"
+RAILWAY_DEFAULT_DB_PASSWORD="A1r2i3c4h5#"
 RAILWAY_DEFAULT_DB_PORT="5432"
-RAILWAY_DEFAULT_DB_USER="data1_23n9_user"
+RAILWAY_DEFAULT_DB_USER="postgres"
 SECRET_KEY="django-insecure-n_!-muy+9$*!f0j=sfyz44p%tf@5^6*-*8(q6$ecv8t=mj84--"
