--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -4,11 +4,11 @@ EMAIL_HOST_PASSWORD="dusc qbjx raae wbpg"
 EMAIL_HOST_USER="vfpogcustomerservice@gmail.com"
 EMAIL_PORT="587"
 EMAIL_USE_TLS="True"
-RAILWAY_COMPARISON_DB_HOST="db.jufachckhqbxmgewuwtp.supabase.co"
-RAILWAY_COMPARISON_DB_NAME="postgres"
-RAILWAY_COMPARISON_DB_PASSWORD="A1r2i3c4h5#"
+RAILWAY_COMPARISON_DB_HOST="dpg-d409n8muk2gs739tev50-a"
+RAILWAY_COMPARISON_DB_NAME="datavg"
+RAILWAY_COMPARISON_DB_PASSWORD="wVCtmT3Yz6RwYTnLPVevwxOBKZ5jQSfH"
 RAILWAY_COMPARISON_DB_PORT="5432"
-RAILWAY_COMPARISON_DB_USER="postgres"
+RAILWAY_COMPARISON_DB_USER="datavg_user"
 
 RAILWAY_DEFAULT_DB_HOST="dpg-db.qaamhqpezfufjziznxtu.supabase.co"
 RAILWAY_DEFAULT_DB_NAME="postgres"
