--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -10,10 +10,10 @@ RAILWAY_COMPARISON_DB_PASSWORD="wVCtmT3Yz6RwYTnLPVevwxOBKZ5jQSfH"
 RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="datavg_user"
 
-RAILWAY_DEFAULT_DB_HOST="dpg-db.qaamhqpezfufjziznxtu.supabase.co"
-RAILWAY_DEFAULT_DB_NAME="postgres"
-RAILWAY_DEFAULT_DB_PASSWORD="A1r2i3c4h5#"
+RAILWAY_DEFAULT_DB_HOST="dpg-d409dcje5dus738865e0-a"
+RAILWAY_DEFAULT_DB_NAME="data_ge2o"
+RAILWAY_DEFAULT_DB_PASSWORD="9VoPd8r0A61XUSJVMmkWqDFvFYzmO9ds"
 RAILWAY_DEFAULT_DB_PORT="5432"
-RAILWAY_DEFAULT_DB_USER="postgres"
+RAILWAY_DEFAULT_DB_USER="data_ge2o_user"
 
 SECRET_KEY="django-insecure-n_!-muy+9$*!f0j=sfyz44p%tf@5^6*-*8(q6$ecv8t=mj84--"
