--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -4,16 +4,14 @@ EMAIL_HOST_PASSWORD="dusc qbjx raae wbpg"
 EMAIL_HOST_USER="vfpogcustomerservice@gmail.com"
 EMAIL_PORT="587"
 EMAIL_USE_TLS="True"
-RAILWAY_COMPARISON_DB_HOST="dpg-d409n8muk2gs739tev50-a"
-RAILWAY_COMPARISON_DB_NAME="datavg"
-RAILWAY_COMPARISON_DB_PASSWORD="wVCtmT3Yz6RwYTnLPVevwxOBKZ5jQSfH"
-RAILWAY_COMPARISON_DB_PORT="5432"
-RAILWAY_COMPARISON_DB_USER="datavg_user"
-
-RAILWAY_DEFAULT_DB_HOST="dpg-d409dcje5dus738865e0-a"
-RAILWAY_DEFAULT_DB_NAME="data_ge2o"
-RAILWAY_DEFAULT_DB_PASSWORD="9VoPd8r0A61XUSJVMmkWqDFvFYzmO9ds"
-RAILWAY_DEFAULT_DB_PORT="5432"
-RAILWAY_DEFAULT_DB_USER="data_ge2o_user"
-
+RAILWAY_COMPARISON_DB_HOST="junction.proxy.rlwy.net"
+RAILWAY_COMPARISON_DB_NAME="railway"
+RAILWAY_COMPARISON_DB_PASSWORD="lDgNeerYObYnBioDuCMIYiSlmHCXLDKW"
+RAILWAY_COMPARISON_DB_PORT="37105"
+RAILWAY_COMPARISON_DB_USER="postgres"
+RAILWAY_DEFAULT_DB_HOST="autorack.proxy.rlwy.net"
+RAILWAY_DEFAULT_DB_NAME="railway"
+RAILWAY_DEFAULT_DB_PASSWORD="zWIFlOKNSPCwMZNbrBOLIeZRuRJscIuS"
+RAILWAY_DEFAULT_DB_PORT="27249"
+RAILWAY_DEFAULT_DB_USER="postgres"
 SECRET_KEY="django-insecure-n_!-muy+9$*!f0j=sfyz44p%tf@5^6*-*8(q6$ecv8t=mj84--"
