--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -10,10 +10,10 @@ RAILWAY_COMPARISON_DB_PASSWORD="wVCtmT3Yz6RwYTnLPVevwxOBKZ5jQSfH"
 RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="datavg_user"
 
-RAILWAY_DEFAULT_DB_HOST="dpg-d409dcje5dus738865e0-a"
-RAILWAY_DEFAULT_DB_NAME="data_ge2o"
-RAILWAY_DEFAULT_DB_PASSWORD="9VoPd8r0A61XUSJVMmkWqDFvFYzmO9ds"
+RAILWAY_DEFAULT_DB_HOST="dpg-d42p4d6r433s73droecg-a"
+RAILWAY_DEFAULT_DB_NAME="tt_gz8k"
+RAILWAY_DEFAULT_DB_PASSWORD="hpKNrKVf3yUFy54u0CSUsbsUAaQIGXKj"
 RAILWAY_DEFAULT_DB_PORT="5432"
-RAILWAY_DEFAULT_DB_USER="data_ge2o_user"
+RAILWAY_DEFAULT_DB_USER="tt_gz8k_user"
 
 SECRET_KEY="django-insecure-n_!-muy+9$*!f0j=sfyz44p%tf@5^6*-*8(q6$ecv8t=mj84--"
