--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -10,8 +10,7 @@ RAILWAY_COMPARISON_DB_PASSWORD="wVCtmT3Yz6RwYTnLPVevwxOBKZ5jQSfH"
 RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="datavg_user"
 
-RAILWAY_DEFAULT_DB_HOST="postgresql://tt_gz8k_user:hpKNrKVf3yUFy54u0CSUsbsUAaQIGXKj@dpg-d42p4d6r433s73droecg-a/tt_gz8k"
-
+RAILWAY_DEFAULT_DB_HOST="dpg-d42p4d6r433s73droecg-a"
 RAILWAY_DEFAULT_DB_NAME="tt_gz8k"
 RAILWAY_DEFAULT_DB_PASSWORD="hpKNrKVf3yUFy54u0CSUsbsUAaQIGXKj"
 RAILWAY_DEFAULT_DB_PORT="5432"
