--- a/automatedvote/.env
+++ b/automatedvote/.env
@@ -4,13 +4,13 @@ EMAIL_HOST_PASSWORD="dusc qbjx raae wbpg"
 EMAIL_HOST_USER="vfpogcustomerservice@gmail.com"
 EMAIL_PORT="587"
 EMAIL_USE_TLS="True"
-RAILWAY_COMPARISON_DB_HOST="dpg-d409n8muk2gs739tev50-a"
+RAILWAY_COMPARISON_DB_HOST="dpg-d409n8muk2gs739tev50-a.oregon-postgres.render.com"
 RAILWAY_COMPARISON_DB_NAME="datavg"
 RAILWAY_COMPARISON_DB_PASSWORD="wVCtmT3Yz6RwYTnLPVevwxOBKZ5jQSfH"
 RAILWAY_COMPARISON_DB_PORT="5432"
 RAILWAY_COMPARISON_DB_USER="datavg_user"
 
-RAILWAY_DEFAULT_DB_HOST="dpg-d42p4d6r433s73droecg-a"
+RAILWAY_DEFAULT_DB_HOST="dpg-d42p4d6r433s73droecg-a.oregon-postgres.render.com"
 RAILWAY_DEFAULT_DB_NAME="tt_gz8k"
 RAILWAY_DEFAULT_DB_PASSWORD="hpKNrKVf3yUFy54u0CSUsbsUAaQIGXKj"
 RAILWAY_DEFAULT_DB_PORT="5432"
